# OneLauncher

./: .dockerignore  .editorconfig  .env.template  .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .rustfmt.toml  .taplo.toml  .template.env  ATTRIBUTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  changelog.config.ts  changelogithub.config.ts  eslint.config.js  eslint.config.ts  flake.nix  index.html  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  rust-toolchain.toml  shared.config.ts  shell.nix  tailwind.config.js  tailwind.config.ts  tsconfig.base.json  tsconfig.json  uncommitted.patch  uno.config.ts  vite.config.ts  vitest.workspace.json  (+1 more)
apps/backend/: Cargo.toml
apps/backend/src/: main.rs
apps/desktop/: .gitignore  .setup-cross.sh  Cargo.toml  build.rs  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
apps/desktop/capabilities/: default.json
apps/desktop/permissions/onelauncher/: default.toml
apps/desktop/src/: imports.ts  lib.rs  main.rs
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/permissions/onelauncher/: default.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/api/: commands.rs
apps/desktop/src-tauri/src/ext/: updater.rs
apps/desktop/src/api/: commands.rs  events.rs  mod.rs  statics.rs
apps/desktop/src/api/commands/: cluster.rs  mod.rs  package.rs  processor.rs  users.rs
apps/desktop/src/ext/: deeplink.rs  mod.rs  specta.rs  updater.rs
apps/desktop/src/types/: global.d.ts
apps/desktop/src/ui/: App.tsx
apps/desktop/src/ui/components/: ScrollableContainer.tsx  Sidebar.tsx  WindowFrame.tsx
apps/desktop/src/ui/components/base/: Button.module.scss  Button.tsx  Dropdown.module.scss  Dropdown.tsx  SelectList.module.scss  SelectList.tsx  Tag.module.scss  TextField.tsx  Toggle.tsx
apps/desktop/src/ui/components/content/: ModCard.tsx
apps/desktop/src/ui/components/game/: PlayerHead.tsx
apps/desktop/src/ui/components/logos/: PolyfrostFull.tsx
apps/desktop/src/ui/components/overlay/: AccountPopup.tsx  FullscreenOverlay.tsx  Modal.tsx  Popup.tsx
apps/desktop/src/ui/components/overlay/cluster/: ClusterCreationModal.tsx  ClusterStepOne.tsx  ClusterStepTwo.tsx
apps/desktop/src/ui/components/overlay/notifications/: NotificationOverlay.tsx
apps/desktop/src/ui/hooks/: useBrowserController.tsx  useCluster.tsx  useCommand.ts
apps/desktop/src/ui/pages/: Home.tsx
apps/desktop/src/ui/pages/browser/: BrowserMain.tsx  BrowserMod.tsx  BrowserRoot.tsx
apps/desktop/src/ui/pages/cluster/: ClusterLogs.tsx  ClusterMods.tsx  ClusterOverview.tsx  ClusterRoot.tsx
apps/desktop/src/ui/pages/cluster/cluster/: ClusterOverview.tsx  (+2 more)
apps/desktop/src/ui/pages/settings/: SettingsRoot.tsx
apps/desktop/src/utils/: primitives.ts  sorting.ts
apps/onelauncher/desktop/: Cargo.toml  Info.plist  build.rs  package.json  tauri.conf.json
apps/onelauncher/desktop/capabilities/: default.json
apps/onelauncher/desktop/src/: constants.rs  lib.rs  main.rs
apps/onelauncher/desktop/src/api/: commands.rs  mod.rs  statics.rs
apps/onelauncher/desktop/src/api/commands/: cluster.rs  package.rs  settings.rs  users.rs
apps/onelauncher/desktop/src/ext/: updater.rs
apps/testing/: Cargo.toml  index.html  package.json
apps/testing/examples/: cluster_packages.rs  murmur2_hash.rs  search_packages.rs
apps/testing/src/: main.rs
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: constants.rs  error.rs  lib.rs  logger.rs
core/src/api/: handler.rs  ingress.rs  java.rs  logger.rs  metadata.rs  minecraft.rs  mod.rs  processor.rs  settings.rs
core/src/api/cluster/: create.rs  mod.rs
core/src/api/package/: mod.rs  mrpack.rs  zip.rs
core/src/api/package/import/: mod.rs
core/src/api/proxy/: mod.rs  send.rs  utils.rs
core/src/auth/: microsoft_auth.rs  mod.rs
core/src/game/: arguments.rs  client.rs  java.rs  metadata.rs  minecraft.rs  mod.rs  vanilla.rs
core/src/store/: clusters.rs  credentials.rs  dirs.rs  discord.rs  flags.rs  java_versions.rs  metadata.rs  minecraft.rs  mod.rs  oneconfig.rs  package.rs  processor.rs  settings.rs
core/src/utils/: dirs.rs  file.rs  http.rs  io.rs  java.rs  mod.rs  platform.rs  watcher.rs
core/wrapper/: README.md
crates/debugger/: Cargo.toml
crates/debugger/src/: lib.rs
crates/prisma/: Cargo.toml
crates/prisma-cli/: Cargo.toml
crates/prisma/src/: lib.rs
crates/testing/: Cargo.toml
crates/testing/src/: main.rs
desktop/src-tauri/: Cargo.toml  Cross.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/onelauncher/: default.toml
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/api/: commands.rs  mod.rs
desktop/src-tauri/src/ext/: updater.rs
onelauncher/: Cargo.toml
onelauncher/src/: constants.rs  error.rs  lib.rs  logger.rs  settings.rs
onelauncher/src/auth/: microsoft_auth.rs  mod.rs
onelauncher/src/game/: client.rs  client_manager.rs  cluster.rs  java.rs  minecraft.rs  mod.rs  vanilla.rs
onelauncher/src/game/clients/: mod.rs  vanilla.rs
onelauncher/src/utils/: dirs.rs  file.rs  http.rs  mod.rs  platform.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/permissions/auth/: default.toml
src-tauri/permissions/game/: default.toml
src-tauri/permissions/launcher-core/: default.toml
src-tauri/permissions/onelauncher/: default.toml
src-tauri/prisma/: schema.prisma
src-tauri/prisma/migrations/20240320193141_init/: migration.sql
src-tauri/src/: api.rs  constants.rs  error.rs  lib.rs  main.rs
src-tauri/src/api/: auth.rs  game.rs  mod.rs
src-tauri/src/auth/: microsoft_auth.rs  mod.rs
src-tauri/src/game/: client.rs  manifest.rs  minecraft.rs  mod.rs  plugin.rs  vanilla.rs  version.rs
src-tauri/src/game/clients/: mod.rs  vanilla.rs
src-tauri/src/launcher_core/: auth.rs  game.rs  mod.rs
src-tauri/src/utils/: file.rs  http.rs  mod.rs
(+701 files in other folders)
