[workspace]
members = [
  "packages/*",
]
resolver = "3"

[workspace.package]
authors = [
  "Polyfrost",
  "Polyfrost Contributors",
]
documentation = "https://github.com/Polyfrost/OneLauncher"
edition = "2024"
homepage = "https://polyfrost.org/projects/oneclient"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Polyfrost/OneLauncher"
version = "2.0.2"


[workspace.dependencies]
# core
polyio = { path = "./packages/polyio" }
oneclient_core = { path = "./packages/oneclient_core" }
oneclient_db = { path = "./packages/oneclient_db" }
oneclient_macro = { path = "./packages/oneclient_macro" }

# core (extra)
gamemode_rs = {path = "./packages/gamemode_rs"}
interfrost = {version = "=1.3.2"}
discord-rich-presence = {version = "=1.1.0"}

# logging
tracing = {version = "=0.1.44"}
tracing-futures = {version = "=0.2.5"}
tracing-subscriber = {version = "=0.3.23", features = ["env-filter", "fmt", "ansi", "json", "parking_lot", "registry"]}

sentry = {version = "=0.48.5", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "release-health",
  "reqwest",
  "rustls",
]}
sentry-tracing = {version = "=0.48.5"}

# database
sqlx = {version = "=0.9.0", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls-ring-native-roots",
  "sqlite",
  "derive",
  "macros",
  "migrate",
  "json",
  "uuid",
  "chrono",
]}

# async
async-trait = {version = "=0.1.89"}
futures-util = {version = "=0.3.32", features = ["tokio-io"]}
futures-lite = { version = "=2.6.1" }
reqwest = {version = "=0.13.3", default-features = false, features = [
  "json",
  "stream",
  "multipart",
  "blocking",
  "rustls",
  "charset",
  "http2",
  "deflate",
  "gzip",
  "brotli",
  "form",
  "hickory-dns",
]}
reqwest-websocket = {version = "=0.6.0"}
tokio = {version = "=1.52.3", features = ["full"]}
tokio-stream = {version = "=0.1.18", features = ["full"]}
tokio-util = {version = "=0.7.18", features = ["full"]}
async_zip = { version = "=0.0.18", features = ["chrono", "tokio", "tokio-fs", "deflate", "deflate64"]}
astral-tokio-tar = { version = "=0.6.2" }
async-tempfile = { version = "=0.7.0", features = ["uuid"] }
async-stream = { version = "=0.3.6" }
async-compression = { version = "=0.4.42", features = ["tokio", "gzip"] }

# crypto (content hashing)
digest = { version = "=0.10.7", features = ["std"] }
sha1 = { version = "=0.10.6", default-features = false }
sha2 = { version = "=0.10.9", default-features = false }
md-5 = { version = "=0.10.6", default-features = false }
p256 = { version = "=0.13.2", features = ["ecdsa", "pkcs8"] }
byteorder = { version = "=1.5.0" }

# util
base64 = {version = "=0.22.1"}
chrono = {version = "=0.4.44", features = ["serde"]}
directories = {version = "=6.0.0"}
rand = {version = "=0.10.1"}
serde = {version = "=1.0.228"}
serde_json = {version = "=1.0.150"}
url = {version = "=2.5.8", features = ["serde"]}
uuid = {version = "=1.23.1", features = ["serde", "v4"]}
sanitize-filename = { version = "=0.6.0" }
regex = { version = "=1.12.3" }
parking_lot = { version = "=0.12.5" }
dunce = { version = "=1.0.5" }
junction = { version = "=2.0.0" }
bytes = { version = "=1.11.1" }
indicatif = { version = "=0.18.4", features = [ "tokio" ]}
sysinfo = { version = "=0.39.5" }

# util (codegen/macro)
proc-macro2 = {version = "=1.0.106"}
quote = {version = "=1.0.45"}
thiserror = {version = "=2.0.18" }
anyhow = {version = "=1.0.102"}
strum = {version = "=0.28.0", features = ["derive"]}
syn = {version = "=2.0.117"}

image = {version = "=0.25.10", default-features = false, features = ["png", "jpeg"]}
htmd = {version = "=0.5.4"}
arboard = {version = "=3.6.1"}
trash = {version = "=5.2.6"}

# required for the SKSL player renderer
freya-skia-safe = "=0.98.0"
freya = { git = "https://github.com/marc2332/freya.git", branch = "fix/blur", features = ["engine", "winit", "router", "remote-asset", "sdk", "markdown", "query", "titlebar"] }

[patch.crates-io]
freya = { git = "https://github.com/marc2332/freya.git", branch = "fix/blur" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# Keep the *shipped* binary stripped and small, but still emit debug info into
# separate files (macOS: .dSYM, Linux: .dwp, Windows: .pdb) so Sentry can
# symbolicate crash reports. CI uploads those files with `sentry-cli debug-files
# upload`; they are never shipped to users. Without this, release stack traces
# are just raw addresses. Use "full" instead of "line-tables-only" if you also
# want inlined-frame / variable info (larger debug files, slower builds).
strip = true
panic = "abort"
debug = "line-tables-only"
split-debuginfo = "packed"

[profile.release-profiling]
inherits = "release"

strip = false
debug = true
