[package]
name = "polyfrost_api"
version = "0.0.0"
description = "API and Backend for Polyfrost"
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "polyfrost_api"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4" }
actix-rt = { version = "2.9.0" }
governor = { version = "0.6" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

log = { version = "0.4" }
env_logger = { version = "0.11" }
dotenvy = { version = "0.15" }
xml = { version = "0.8" }
