[package]
name = "onelauncher"
version = "0.0.0"
description = "The core of OneLauncher"
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
tauri = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

interpulse = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
tracing-appender = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
sha1 = { workspace = true }
discord-rich-presence = { workspace = true }
