[package]
name = "polyfrost-launcher"
version = "0.0.0"
description = "A Tauri App"
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
poly-prisma = { path = "../crates/prisma" }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
prisma-client-rust = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
