[package]
name = "onelauncher_gui"
version = "0.0.0"
description = "A Tauri App"
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
onelauncher = { path = "../onelauncher" }

interpulse = { workspace = true, features = [ "bincode" ] }

tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-error = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
