[package]
name = "polyfrost_api"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
roxmltree = { workspace = true }
