[package]
name = "onelauncher_gui"
description = "Next-generation open source Minecraft launcher"
version = "1.0.0-alpha.1" # todo: make it so tauri works with the ws
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[lib]
name = "onelauncher_gui"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { workspace = true, features = [
  "isolation",
  "codegen",
] }

[dependencies]
onelauncher = { workspace = true, features = [ "tauri" ] }

tauri = { workspace = true, features = [
  "isolation",
  "macos-private-api",
  "image-ico",
  "image-png",
  "protocol-asset"
] }
tauri-utils = { workspace = true }
tauri-build = { workspace = true }
tauri-codegen = { workspace = true }
tauri-macros = { workspace = true }
tauri-plugin = { workspace = true }
tauri-runtime = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-authenticator = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }

tauri-specta = { workspace = true }
specta = { workspace = true }

interpulse.workspace = true

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-error = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
objc.workspace = true

[features]
default = [ "custom-protocol" ]
devtools = [ "tauri/devtools" ]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
