[package]
name = "onelauncher_gui"
default-run = "onelauncher_gui"
description = "Next-generation open source Minecraft launcher"
version = "1.0.0-alpha.1" # todo: make it so tauri works with the ws
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[lib]
name = "onelauncher_gui"
crate-type = [
  "staticlib",
  "cdylib",
  "lib"
]

[build-dependencies]
tauri-build = { workspace = true, features = [ "isolation" ] }

[dependencies]
onelauncher = { workspace = true, features = [ "tauri" ] }
onelauncher_macros = { workspace = true }

tauri-plugin-shell = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }

tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }

interpulse.workspace = true

strum = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-error = { workspace = true }

[dependencies.tauri]
workspace = true
features = [
  "isolation",
  "macos-private-api",
  "image-ico",
  "image-png",
  "protocol-asset",
  "specta"
]

[dev-dependencies.tauri]
workspace = true
features = [ "test" ]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
objc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# https://github.com/tauri-apps/tauri/blob/tauri-v2.0.0-rc.0/core/tauri/Cargo.toml#L86
webkit2gtk = { version = "=2.0.1", features = [ "v2_38" ] }

[features]
default = [ "custom-protocol" ]
devtools = [ "tauri/devtools" ]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
