[package]
name = "onelauncher_gui"
default-run = "onelauncher_gui"
description = "Next-generation open source Minecraft launcher"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[lib]
name = "onelauncher_gui"
crate-type = [ "staticlib", "cdylib", "lib" ]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
onelauncher = { workspace = true, features = [ "tauri", "specta" ] }
onelauncher_macros = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
interpulse = { workspace = true }
strum = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }

[dependencies.tauri]
workspace = true
features = [
	"macos-private-api",
	"image-ico",
	"image-png",
	"protocol-asset",
	"specta"
]

[dev-dependencies.tauri]
workspace = true
features = [ "test" ]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { workspace = true }
objc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { workspace = true }

[features]
default = [ "custom-protocol" ]
devtools = [ "tauri/devtools" ]
custom-protocol = [ "tauri/custom-protocol" ]
