[package]
name = "onelauncher_test"
description = "test implementation of onelauncher"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[lints]
workspace = true

[dependencies]
onelauncher = { workspace = true, features = [ "cli" ] }
tokio = { workspace = true }
webbrowser = { workspace = true }
url = { workspace = true }
