[package]
name = "prisma-cli"
version = "0.1.0"
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
prisma-client-rust-cli = { workspace = true }
