[package]
name = "onelauncher_test"
version = "0.0.0"
description = "test implementation of onelauncher"
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
onelauncher = { path = "../core", features = [ "cli" ] }

tokio = { workspace = true }
webbrowser = { workspace = true }
url = { workspace = true }
