[package]
name = "onelauncher_test"
description = "test implementation of onelauncher"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
onelauncher = { path = "../core", features = [ "cli" ] }

tokio = { workspace = true }
webbrowser = { version = "0.8" }
url = { version = "2.5.2" }
